--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.wateradmin"
-        minSdk 29
+        minSdk 20
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -47,6 +49,13 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+
+    //Retrofit - default
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
 }
